# TreeMachine.Pro

./: .editorconfig  .gitattributes  .gitignore  ComponentMachine.sln  HierarchicalNodeMachine.sln  HierarchicalTreeMachine.sln  README.md  Readme.md  TreeMachine.Pro.sln
ComponentMachine/: ComponentMachine.csproj
ComponentMachine/System/: ComponentBase.cs  ComponentMachineBase.cs  HierarchyBase.cs  NodeBase.cs
ComponentMachine/System.Diagnostics.CodeAnalysis/: NullableAttribute.cs
HierarchicalNodeMachine/: HierarchicalNodeMachine.csproj
HierarchicalNodeMachine.Tests/: HierarchicalNodeMachine.Tests.csproj
HierarchicalNodeMachine.Tests/System/: Tests.cs
HierarchicalNodeMachine/System/: HierarchyBase.cs  IHierarchyBase.cs  NodeBase.cs
HierarchicalStateMachine.Tests/System/: Tests.cs
HierarchicalStateMachine/System/: ChildrenableStateBase.cs  ComponentBase.cs  ComponentSystemBase.cs  HierarchicalStateBase.cs  HierarchicalStateMachineBase.cs  StateBase.cs  StateMachineBase.cs
HierarchicalTreeMachine/: HierarchicalTreeMachine.csproj
HierarchicalTreeMachine.Tests/: HierarchicalTreeMachine.Tests.csproj
HierarchicalTreeMachine.Tests/System/: Tests.cs  Tests_00.cs  Tests_01.cs
HierarchicalTreeMachine/System/: IHierarchy.cs  ITree.cs  NodeBase.cs  Tree.cs  TreeBase.cs
TreeMachine.Pro/: TreeMachine.Pro.csproj
TreeMachine.Pro (CSharp)/TreeMachine.Pro.Tests/: TreeMachine.Pro.Tests.csproj
TreeMachine.Pro (Cpp)/: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  Directory.Build.props  MODULE.bazel  Meson-Dist-Release.bat  Meson-Install-Debug.bat  Meson-Install-Release.bat  Meson-Setup.bat  TreeMachine.Pro.sln  bazel-build.bat  bazel-test.bat  build.bat  meson-dist.bat  meson-install.bat  meson-native-file.ini  meson-setup.bat  meson-tests.bat  meson.build  test.bat
TreeMachine.Pro (Cpp)/SubProjects/TreeMachine.Pro/: meson.build
TreeMachine.Pro (Cpp)/SubProjects/TreeMachine.Pro.Tests/Private/: Tests_00.cpp
TreeMachine.Pro (Cpp)/SubProjects/TreeMachine.Pro/Private/TreeMachine/: NodeBase.cpp  TreeBase.cpp
TreeMachine.Pro (Cpp)/TreeMachine.Pro/: BUILD.bazel  TreeMachine.Pro.vcxproj  TreeMachine.Pro.vcxproj.filters  TreeMachine.h  meson.build  pch.h
TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/: BUILD.bazel  TreeMachine.Pro.Tests.vcxproj  TreeMachine.Pro.Tests.vcxproj.filters  meson.build
TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/Private/: Tests_00.cpp
TreeMachine.Pro (Cpp)/TreeMachine.Pro/Private/: pch.h
TreeMachine.Pro (Cpp)/TreeMachine.Pro/Private/TreeMachine/: NodeBase.cpp  TreeBase.cpp
TreeMachine.Pro (Cpp)/TreeMachine.Pro/Public/TreeMachine/: TreeMachine.h
TreeMachine.Pro (Cpp)/TreeMachine.Pro/TreeMachine/: NodeBase.cpp  NodeBase.h  TreeBase.cpp  TreeBase.h
TreeMachine.Pro(CSharp)/: .editorconfig  TreeMachine.Pro.sln
TreeMachine.Pro(CSharp)/TreeMachine.Pro/System.TreeMachine/: NodeBase.Part.1.cs
TreeMachine.Pro(Cpp)/: .gitignore
TreeMachine.Pro(Cpp)/TreeMachine.Pro/: BUILD.bazel
TreeMachine.Pro(Cpp)/TreeMachine.Pro.Tests/: BUILD.bazel
TreeMachine.Pro(Cpp)/TreeMachine.Pro.Tests/Private/: Tests_00.cpp
TreeMachine.Pro(Cpp)/TreeMachine.Pro.Tests/Sources/: Tests_00.cpp
TreeMachine.Pro.Tests/: TreeMachine.Pro.Tests.csproj
TreeMachine.Pro.Tests/System/: Tests_00.cs
TreeMachine.Pro.Tests/System.TreeMachine/: Node.cs  Tests.cs  Tests_00.cs  Tests_01.cs  Tests_02.cs  Tree.cs
TreeMachine.Pro/System/: Assert.cs  ITree.cs  Throw.cs  Tree.cs
TreeMachine.Pro/System.Diagnostics/: Debug2.cs
TreeMachine.Pro/System.Diagnostics.CodeAnalysis/: NullableAttribute.cs
TreeMachine.Pro/System.Runtime.CompilerServices/: IsExternalInit.cs
TreeMachine.Pro/System.TreeMachine/: ITree.cs  NodeBase.Part.1.cs  NodeBase.Part.2.cs  NodeBase.Part.3.cs  NodeBase.cs  NodeBase2.cs  NodeBase3.cs  NodeBase4.cs  NodeBase5.cs  Tree.cs
TreeMachine.Pro_CSharp/: README.md
TreeMachine.Pro_CSharp/TreeMachine.Pro/: TreeMachine.Pro.csproj
TreeMachine.Pro_CSharp/TreeMachine.Pro.Tests/System.TreeMachine/: Node.cs  Tests.cs  Tests_00.cs  Tests_01.cs  Tests_02.cs  Tests_03.cs  Tree.cs
TreeMachine.Pro_CSharp/TreeMachine.Pro/System.TreeMachine/: ITree.cs  NodeBase.Part.1.cs  NodeBase.Part.2.cs  NodeBase.Part.3.cs  NodeBase.Part.4.cs  (+1 more)
TreeMachine.Pro_Cpp/: .bazelrc  .clang-format  .clang-tidy  .gitignore  MODULE.bazel  README.md
TreeMachine.Pro_Cpp/.clwb/: .bazelproject
TreeMachine.Pro_Cpp/TreeMachine.Pro/: BUILD.bazel
TreeMachine.Pro_Cpp/TreeMachine.Pro.Tests/: BUILD.bazel
TreeMachine.Pro_Cpp/TreeMachine.Pro/Headers/TreeMachine/: Helpers.h  Impl_NodeBase.h  Impl_NodeBase2.h  Impl_TreeBase.h  NodeBase.h  NodeBase2.h  NodeBase_Impl.h  TreeBase.h  TreeBase_Impl.h  TreeMachine.h
TreeMachine.Pro_Cpp/TreeMachine.Pro/Headers/TreeMachine/Internal/: Impl_NodeBase.h  NodeBase.h  NodeBase2.h  TreeBase.h
TreeMachine.Pro_Cpp/TreeMachine.Pro/Sources/TreeMachine/: NodeBase.cpp  TreeBase.cpp
(+12 files in other folders)
