cc_test(
    name = "tree_machine_pro_tests",
    srcs = glob([
        "pch/pch.cpp",
        "Private/*.cpp",
        "Private/**/*.cpp",
    ], allow_empty = True),
    includes = [
        ".",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//TreeMachine.Pro:tree_machine_pro",
    ],
    visibility = ["//visibility:public"],
)
