cc_library(
    name = "tree_machine_pro",
    srcs = glob([
        "pch/pch.cpp",
        "Private/*.cpp",
        "Private/**/*.cpp",
    ], allow_empty = True),
    hdrs = glob([
        "Public/*.h",
        "Public/**/*.h",
    ], allow_empty = True),
    includes = ["."],
    deps = [
    ],
    copts = ["/std:c++17"],
    visibility = ["//visibility:public"],
)
